fixed gapping and added k8 color pallete in the ts config

--- a/site/modules/k8/home/demo-video/DemoVideo.module.css
+++ b/site/modules/k8/home/demo-video/DemoVideo.module.css
@@ -1,5 +1,5 @@
 .demoVideoContainer {
-  @apply flex flex-col md:flex-row gap-3 justify-between w-full;
+  @apply flex flex-col md:flex-row gap-3 justify-between w-full mt-0 md:mt-12;
 }
 
 .textContainer {
